# lemon

./: CMakeLists.txt  Makefile  main.c
includes/: ft_printf.h  get_next_line.h  lem_in.h
libft/: Makefile  ft_atoi.c  ft_isdigit.c  ft_itoa.c  ft_memcmp.c  ft_memcpy.c  ft_putnbr.c  ft_putstr.c  ft_putstr_fd.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strjoin.c  ft_strncat.c  ft_strncpy.c  ft_strnew.c  ft_strstr.c  ft_strsub.c  lst_gnl.c
libft/includes/: ft_printf.h  libft.h
libft/src/: ft_char_count.c  ft_free_array.c  ft_number_of_alen.c  ft_wordscount.c  get_next_line.c  list_funcs.c  list_funcs_two.c
printf/: float.c  hex.c  print_number_o_two.c
rcs/: big  big_super  big_test  circle_1  circle_2  one_line  one_room  small
src/: bfs.c  find_index.c  get_next_line.c  list_func.c  list_func_for_algo.c  list_func_four.c  list_func_three.c  list_func_two.c  main.c  print.c  pustit_jukov.c  read_line.c  read_rooms.c  rly.c  rly_two.c  rooms.c  set_ways.c
srcs/: cvars.c  find_index.c  find_way.c  get_next_line.c  list_func.c  list_func_two.c  main.c
